--- a/sshkm/static/custom.css
+++ b/sshkm/static/custom.css
@@ -165,6 +165,12 @@ select[multiple] option:checked {
   color: green;*/
 }
 
+table.dataTable thead .sorting, 
+table.dataTable thead .sorting_asc, 
+table.dataTable thead .sorting_desc {
+  background : none;
+}
+
 .searchbox {
   max-width: 330px;
 }
